// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerificationPromptCard Snapshot matches snapshot 1`] = `
<View
  entering={
    {
      "damping": [MockFunction],
      "delay": [MockFunction],
      "duration": [MockFunction] {
        "calls": [
          [
            400,
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": [Circular],
          },
        ],
      },
      "springify": [MockFunction] {
        "calls": [
          [],
        ],
        "results": [
          {
            "type": "return",
            "value": [Circular],
          },
        ],
      },
      "withInitialValues": [MockFunction],
    }
  }
  style={
    {
      "marginHorizontal": 16,
      "marginVertical": 12,
    }
  }
  testID="verification-prompt-card"
>
  <LinearGradient
    colors={
      [
        "#0066FF",
        "#0052CC",
      ]
    }
    end={
      {
        "x": 1,
        "y": 1,
      }
    }
    start={
      {
        "x": 0,
        "y": 0,
      }
    }
    style={
      {
        "borderRadius": 16,
        "overflow": "hidden",
        "padding": 20,
        "paddingVertical": 20,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <Text
        color="#FFFFFF"
        size={32}
        style={
          {
            "marginBottom": 12,
          }
        }
      >
        school
      </Text>
      <Text
        style={
          [
            {
              "fontSize": 18,
              "fontWeight": "600",
              "marginBottom": 8,
              "textAlign": "center",
            },
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        Mesleğini Doğrula
      </Text>
      <Text
        style={
          [
            {
              "fontSize": 14,
              "lineHeight": 20,
              "marginBottom": 16,
              "textAlign": "center",
            },
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        Uzman rozeti kazan ve topluluğa güvenilir üye olarak katıl.
      </Text>
      <View
        entering={
          {
            "delay": [MockFunction] {
              "calls": [
                [
                  100,
                ],
              ],
              "results": [
                {
                  "type": "return",
                  "value": [Circular],
                },
              ],
            },
            "duration": [MockFunction],
            "springify": [MockFunction] {
              "calls": [
                [],
              ],
              "results": [
                {
                  "type": "return",
                  "value": [Circular],
                },
              ],
            },
          }
        }
        style={
          {
            "width": "100%",
          }
        }
      >
        <View
          accessibilityHint="Meslek doğrulama sürecini başlatmak için dokun"
          accessibilityLabel="Doğrulamaya başla"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 12,
                "height": 48,
                "justifyContent": "center",
                "width": "100%",
              },
              {
                "backgroundColor": "#FFFFFF",
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 15,
                  "fontWeight": "600",
                },
                {
                  "color": "#0066FF",
                },
              ]
            }
          >
            Doğrulamaya Başla
          </Text>
        </View>
      </View>
    </View>
  </LinearGradient>
</View>
`;

exports[`VerificationPromptCard Snapshot matches snapshot with custom test ID 1`] = `
<View
  entering={
    {
      "damping": [MockFunction],
      "delay": [MockFunction],
      "duration": [MockFunction] {
        "calls": [
          [
            400,
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": [Circular],
          },
        ],
      },
      "springify": [MockFunction] {
        "calls": [
          [],
        ],
        "results": [
          {
            "type": "return",
            "value": [Circular],
          },
        ],
      },
      "withInitialValues": [MockFunction],
    }
  }
  style={
    {
      "marginHorizontal": 16,
      "marginVertical": 12,
    }
  }
  testID="custom-id"
>
  <LinearGradient
    colors={
      [
        "#0066FF",
        "#0052CC",
      ]
    }
    end={
      {
        "x": 1,
        "y": 1,
      }
    }
    start={
      {
        "x": 0,
        "y": 0,
      }
    }
    style={
      {
        "borderRadius": 16,
        "overflow": "hidden",
        "padding": 20,
        "paddingVertical": 20,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <Text
        color="#FFFFFF"
        size={32}
        style={
          {
            "marginBottom": 12,
          }
        }
      >
        school
      </Text>
      <Text
        style={
          [
            {
              "fontSize": 18,
              "fontWeight": "600",
              "marginBottom": 8,
              "textAlign": "center",
            },
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        Mesleğini Doğrula
      </Text>
      <Text
        style={
          [
            {
              "fontSize": 14,
              "lineHeight": 20,
              "marginBottom": 16,
              "textAlign": "center",
            },
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        Uzman rozeti kazan ve topluluğa güvenilir üye olarak katıl.
      </Text>
      <View
        entering={
          {
            "delay": [MockFunction] {
              "calls": [
                [
                  100,
                ],
              ],
              "results": [
                {
                  "type": "return",
                  "value": [Circular],
                },
              ],
            },
            "duration": [MockFunction],
            "springify": [MockFunction] {
              "calls": [
                [],
              ],
              "results": [
                {
                  "type": "return",
                  "value": [Circular],
                },
              ],
            },
          }
        }
        style={
          {
            "width": "100%",
          }
        }
      >
        <View
          accessibilityHint="Meslek doğrulama sürecini başlatmak için dokun"
          accessibilityLabel="Doğrulamaya başla"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 12,
                "height": 48,
                "justifyContent": "center",
                "width": "100%",
              },
              {
                "backgroundColor": "#FFFFFF",
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 15,
                  "fontWeight": "600",
                },
                {
                  "color": "#0066FF",
                },
              ]
            }
          >
            Doğrulamaya Başla
          </Text>
        </View>
      </View>
    </View>
  </LinearGradient>
</View>
`;
